打通指令下发链路